[package]
name = "actix-sample"
version = "0.1.0"
authors = ["taroosg <root@taroosg.dev>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "2.0"
actix-rt = "1.0"
serde = { version = "1.0", features = ["derive"] }
reqwest = { version = "0.10", features = ["blocking", "json"] }
serde_json = "1.0.59"