[package]
name = "hello-rust"
version = "0.1.0"
authors = ["taroosg <root@taroosg.dev>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ferris-says = "0.2"
rand = "0.4"

[[bin]]
name = "suggestgame"
path = "src/suggestgame.rs"

[[bin]]
name = "fibo"
path = "src/fibo.rs"
