[package]
authors = ["taroosg <root@taroosg.dev>"]
edition = "2018"
name = "http-test"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = {version = "0.11", features = ["json"]}
serde = {version = "^1.0.101", features = ["derive"]}
serde_json = "1.0"
tokio = {version = "1", features = ["full"]}
